
=== (next) ===
CHANGED: minor performance and security improvements to use sealed and frozed objects.
CHANGED: large refactoring of unit tests to be more clean and use AsyncSteps.testcase
CHANGED: large refactoring of SpecTools
FIXED: not to pollute raw specs objects provided in specDirs.
FIXED: to make FTN3 revisions checks after full spec loading
NEW: more strict and verbose integrity checks during spec loading.
NEW: NativeIface interceptors optimized with eval (~9% boost)
NEW: options.secureChannel support

=== 1.10.2 (2018-06-09) ===
CHANGED: upgrade futoin-asyncsteps & futoin-asyncevent
FIXED: exception on rare case of WebSockets connection close in Node.js

=== 1.10.1 (2018-06-09) ===
CHANGED: upgraded to futoin-asyncsteps v2.1 with burst execution feature

=== 1.10.0 (2018-06-06) ===
CHANGED: to use performance-enhanced futoin-asyncsteps v2

=== 1.9.3 (2018-05-25) ===
FIXED: MAC generation to work with null default parameters

=== 1.9.2 (2018-05-23) ===
FIXED: improved browser tests to use dist module
NEW: module exports Errors as alias of legacy FutoInError

=== 1.9.1 (2018-05-23) ===
FIXED: improved CBOR encoding performance by using "cbor" over "borc"
NEW: MAC base calculation

=== 1.9.0 (2018-05-21) ===
NEW: experimental FTN8 Security Concept support

=== 1.8.9 (2018-05-21) ===
FIXED: fatal issue in MAC comparison

=== 1.8.8 (2018-05-20) ===
CHANGED: improved request and response message error reporting verbosity

=== 1.8.7 (2018-05-17) ===
FIXED: missing padding for Base64 in futoin.types spec

=== 1.8.6 (2018-05-15) ===
FIXED: "items" and "regex" cache issue in diamond inheritance
NEW: more detailed SpecTools errors with type validation path

=== 1.8.5 (2018-05-12) ===
FIXED: to properly includes specs/ in package

=== 1.8.4 (2018-05-10) ===
CHANGED: upgraded webpack to v4
FIXED: Browser env WebSockets comm failure without event-emitter

=== 1.8.3 (2018-02-17) ===
CHANGED: Object.prototype is freezed only by SpecTools.secureObjectPrototype()
