@@ -279,30 +279,19 @@ module.exports = ( spectools ) => {
             }
 
             if ( mnr < 4 ) {
-                for ( let f in funcs ) {
-                    const params = funcs[f].params;
+                const check_shortcuts = ( scope ) => {
+                    for ( let n in scope ) {
+                        const t = scope[n];
 
-                    if ( params ) {
-                        for ( let t in params ) {
-                            if ( typeof params[t] === 'string' ) {
-                                as.error( InternalError,
-                                    "Type shortcut is FTN3 v1.4 feature" );
-                            }
-                        }
-                    }
+                        if ( typeof t === 'string' ) {
+                            as.error( InternalError,
+                                "Type shortcut is FTN3 v1.4 feature" );
+                        } else {
+                            const { fields } = t;
 
-                    const result = funcs[f].result;
-
-                    if ( result && typeof result === 'object' ) {
-                        for ( let t in result ) {
-                            t = result[t];
-
-                            if ( typeof t === 'string' ) {
-                                as.error( InternalError,
-                                    "Type shortcut is FTN3 v1.4 feature" );
-                            } else if ( t.type === 'map' && t.fields ) {
-                                for ( t in t.fields ) {
-                                    if ( typeof t === 'string' ) {
+                            if ( fields ) {
+                                for ( let f in fields ) {
+                                    if ( typeof fields[f] === 'string' ) {
                                         as.error( InternalError,
                                             "Type shortcut is FTN3 v1.4 feature" );
                                     }
@@ -310,14 +299,23 @@ module.exports = ( spectools ) => {
                             }
                         }
                     }
-                }
+                };
 
-                for ( let t in types ) {
-                    if ( typeof types[t] === 'string' ) {
-                        as.error( InternalError,
-                            "Type shortcut is FTN3 v1.4 feature" );
+                for ( let f in funcs ) {
+                    const params = funcs[f].params;
+
+                    if ( params ) {
+                        check_shortcuts( params );
+                    }
+
+                    const result = funcs[f].result;
+
+                    if ( result && typeof result === 'object' ) {
+                        check_shortcuts( result );
                     }
                 }
+
+                check_shortcuts( types );
             }
 
             if ( mnr < 5 ) {
