@@ -5,6 +5,7 @@ CHANGED: large refactoring of unit tests to be more clean and use AsyncSteps.tes
 CHANGED: large refactoring of SpecTools
 FIXED: not to pollute raw specs objects provided in specDirs.
 FIXED: to make FTN3 revisions checks after full spec loading
+FIXED: improved FTN3 feature checks for v1.4 shortcuts
 NEW: more strict and verbose integrity checks during spec loading.
 NEW: NativeIface interceptors optimized with eval (~9% boost)
 NEW: options.secureChannel support
